--- a/azure-pipeline12.yml
+++ b/azure-pipeline12.yml
@@ -1,10 +1,10 @@
 trigger:
   branches:
     include:
-      - main # Or the branch you want to trigger the pipeline on
+      - prod # Or the branch you want to trigger the pipeline on
    
-pr:
-  none     
+# pr:
+#   none     
 pool:
   vmImage: 'ubuntu-latest'
 
