--- a/azure-pipeline12.yml
+++ b/azure-pipeline12.yml
@@ -3,8 +3,8 @@ trigger:
     include:
       - main # Or the branch you want to trigger the pipeline on
    
-pr:
-  none     
+# pr:
+#   none     
 pool:
   vmImage: 'ubuntu-latest'
 
